--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
 </head>
 <body>
     <div class="calc">
-        <input readonly class="display"></input>
+        <input readonly id="display"></input>
         <div class="pad">
             <div class="numbers">
-                <button>C</button>
-                <button>±</button>
-                <button>%</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>.</button>
-                <button>0</button>
-                <button>00</button>
+                <button onclick="clearDisplay()">C</button>
+                <button onclick="showToDisplay('±')">±</button>
+                <button onclick="showToDisplay('%')">%</button>
+                <button onclick="showToDisplay('7')">7</button>
+                <button onclick="showToDisplay('8')">8</button>
+                <button onclick="showToDisplay('9')">9</button>
+                <button onclick="showToDisplay('4')">4</button>
+                <button onclick="showToDisplay('5')">5</button>
+                <button onclick="showToDisplay('6')">6</button>
+                <button onclick="showToDisplay('1')">1</button>
+                <button onclick="showToDisplay('2')">2</button>
+                <button onclick="showToDisplay('3')">3</button>
+                <button onclick="showToDisplay('.')">.</button>
+                <button onclick="showToDisplay('0')">0</button>
+                <button onclick="showToDisplay('00')">00</button>
             </div>
             <div class="actions">
-                <button>÷</button>
-                <button>×</button>
-                <button>−</button>
-                <button>+</button>
-                <button>=</button>
+                <button onclick="showToDisplay('/')">÷</button>
+                <button onclick="showToDisplay('*')">×</button>
+                <button onclick="showToDisplay('−')">−</button>
+                <button onclick="showToDisplay('+')">+</button>
+                <button onclick="calculate()" class="equal">=</button>
             </div>
         </div>
     </div>
